// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card render default 1`] = `
<div
  className="card"
>
  <div
    className="image card__image image_hidden"
    style={
      Object {
        "minHeight": "150vw",
      }
    }
  >
    <img
      alt="Скандинавский стиль в интерьере кухни в голубых оттенках"
      className="image__image"
      onLoad={[Function]}
      src="https://avatars.mds.yandex.net/get-pdb/27625/7c81ce06-f70e-405b-87b4-fe826ba9362e/s375"
    />
  </div>
  <div
    className="card__profile"
  >
    <div
      className="card__close"
    >
      <button
        className="close"
      >
        <span
          className="close__icon"
        />
      </button>
    </div>
    <div
      className="person person_card"
    >
      <a
        aria-label="text"
        className="person__avatar"
        href="https://yandex.ru/collections/user/drexxar/"
        rel="noopener noreferrer"
        target="_blank"
        title="Сергей Глушков"
      >
        <img
          alt="Сергей Глушков"
          className="avatar"
          src="https://avatars.mds.yandex.net/get-yapic/27232/591039997-1555108484/islands-retina-small"
        />
      </a>
      <div
        className="person__info"
      >
        <div
          className="board"
        >
          <a
            className="board__link"
            href="https://yandex.ru/collections/user/drexxar/modnaia-boroda/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Модная борода
          </a>
        </div>
        <div
          className="user"
        >
          <a
            className="user__link"
            href="/collections/user/drexxar/"
            target="_blank"
          >
            Сергей Глушков
          </a>
        </div>
        <div
          className="date"
        >
          <span
            className="date__desc"
          >
            15 дней назад
          </span>
        </div>
      </div>
    </div>
    <div
      className="card__article article"
    >
      <div
        className="article__desc"
      >
        Как выбрать правильную форму бороды, как отрастить её и стоит ли девушке относиться к ней негативно.
      </div>
      <a
        className="article__link"
        href="http://bowandtie.ru/vse-chto-nuzhno-znat-o-borode-ili-oda-bradosti/"
        rel="noopener noreferrer"
        target="_blank"
      >
        bowandtie.ru
      </a>
    </div>
  </div>
</div>
`;

exports[`Card render no image 1`] = `
<div
  className="card"
>
  <div
    className="card__profile"
  >
    <div
      className="card__close"
    >
      <button
        className="close"
      >
        <span
          className="close__icon"
        />
      </button>
    </div>
    <div
      className="person person_card"
    >
      <a
        aria-label="text"
        className="person__avatar"
        href="https://yandex.ru/collections/user/drexxar/"
        rel="noopener noreferrer"
        target="_blank"
        title="Сергей Глушков"
      >
        <img
          alt="Сергей Глушков"
          className="avatar"
          src="https://avatars.mds.yandex.net/get-yapic/27232/591039997-1555108484/islands-retina-small"
        />
      </a>
      <div
        className="person__info"
      >
        <div
          className="board"
        >
          <a
            className="board__link"
            href="https://yandex.ru/collections/user/drexxar/modnaia-boroda/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Модная борода
          </a>
        </div>
        <div
          className="user"
        >
          <a
            className="user__link"
            href="/collections/user/drexxar/"
            target="_blank"
          >
            Сергей Глушков
          </a>
        </div>
        <div
          className="date"
        >
          <span
            className="date__desc"
          >
            15 дней назад
          </span>
        </div>
      </div>
    </div>
    <div
      className="card__article article"
    >
      <div
        className="article__desc"
      >
        Как выбрать правильную форму бороды, как отрастить её и стоит ли девушке относиться к ней негативно.
      </div>
      <a
        className="article__link"
        href="http://bowandtie.ru/vse-chto-nuzhno-znat-o-borode-ili-oda-bradosti/"
        rel="noopener noreferrer"
        target="_blank"
      >
        bowandtie.ru
      </a>
    </div>
  </div>
</div>
`;
